# flagged-csv

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  example.py  flagged-csv.prompt.md  hello.py  package.json  pyproject.toml
.claude/: settings.local.json
adw/: 01-add-foreground-color.md
flagged_csv/: __init__.py  cli.py  converter.py  formatter.py
flagged_csv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
testing_xlsx/: test-color.xlsx
tests/: test_converter.py
