[project]
name = "flagged-csv"
version = "0.1.0"
description = "Convert XLSX files to CSV with visual formatting preserved as inline flags"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["xlsx", "csv", "excel", "converter", "formatting", "colors", "merge-cells"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-calamine>=0.2.0",
    "xlrd>=2.0.0",
    "click>=8.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
flagged-csv = "flagged_csv.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/flagged-csv"
Documentation = "https://github.com/yourusername/flagged-csv#readme"
Repository = "https://github.com/yourusername/flagged-csv.git"
Issues = "https://github.com/yourusername/flagged-csv/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flagged_csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
