[project]
name = "flagged-csv"
version = "0.1.0"
description = "Convert XLSX files to CSV with visual formatting preserved as inline flags"
authors = [
    {name = "ross", email = "ross.jill.websolution@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["xlsx", "csv", "excel", "converter", "formatting", "colors", "merge-cells", "ai", "data-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy<2.0",  # Pin to NumPy 1.x to avoid compatibility issues
    "pandas>=2.0.0,<2.2.0",  # Compatible with NumPy 1.x
    "pydantic>=2.0.0",  # For configuration models
    "openpyxl>=3.1.0",
    "python-calamine>=0.2.0",
    "xlrd>=2.0.0",
    "click>=8.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
flagged-csv = "flagged_csv.cli:main"

[project.urls]
Homepage = "https://github.com/ross-jill-ws/flagged-csv"
Documentation = "https://github.com/ross-jill-ws/flagged-csv#readme"
Repository = "https://github.com/ross-jill-ws/flagged-csv.git"
Issues = "https://github.com/ross-jill-ws/flagged-csv/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flagged_csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
